# resume-optimizer

./: CLAUDE.md  README.md  debug_fields.json  debug_fields.py  errors.jsonl  jobbot.py  main.py  personal_info.yaml  prd.md  pyproject.toml  requirements.txt  resume_report_22fd494f-5683-8087-a7e0-f33354343c99.json
archive/: apply_pro_filler_upgrade_auto.py
config/: personal_info.yaml
data/: resume_example.json  tools.csv
docs/: GPT_IMPROVEMENTS.md  smart_field_optimization.md  test_instructions.md  usage_guide.md
form_filler/: CLI_USAGE.md  README.md  apply_pro_filler_upgrade.py  cli.py  greenhouse_test.py  integrate_pro_filler.py  prd_filler.md  test_greenhouse_enhanced.py  test_lever.py  workflow_manager.py  workflow_manager.py.backup.20250714_195556
form_filler/models/: form_fields.py  llm_schemas.py  page_types.py
form_filler/services/: action_executor.py  dom_snapshot.py  enhanced_data_manager.py  field_learning_system.py  field_parser.py  field_validator.py  gpt_service.py  page_analyzer.py  pro_form_filler.py  smart_field_handler.py  smart_form_filler.py
form_filler/utils/: dom_extractor.py  error_reporter.py
ingestion/: __init__.py  cli.py  ingestion_prd.md  settings.py
ingestion/models/: __init__.py  job.py
ingestion/parsers/: README_LLM.md  __init__.py  base.py  factory.py  greenhouse.py  llm_parser.py  universal_parser.py  workday.py
ingestion/services/: __init__.py  notion_service.py
ingestion/utils/: __init__.py  site_detector.py
resume_builder/: JiajunHuo_SWE_UIUC_Resume.tex  README.md  __init__.py  cli.py  draft for sde.tex  resume.cls  setup.py
resume_builder/cli/: validate_resume.py  validation_report.json
scripts/: fill_rippling_job.py
test_results/: field_test_20250714_170819.json  rippling_test_20250714_171550.json  rippling_test_20250714_171831.json  rippling_test_20250714_172146.json
(+17 files in other folders)
