[project]
name = "semi-apply"
version = "0.1.0"
description = "Semi-automated job application pipeline for North American tech positions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "notion-client>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "structlog>=24.0.0",
]

[project.scripts]
jobbot = "jobbot:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["jobbot"]
packages = ["ingestion", "ingestion.models", "ingestion.services", "ingestion.utils", "ingestion.parsers"]
