[project]
name = "semi-apply"
version = "0.1.0"
description = "Semi-automated job application pipeline for North American tech positions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "notion-client>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "structlog>=24.0.0",
    "jsonschema>=4.19.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "browser-use>=0.5.4",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.scripts]
jobbot = "jobbot:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["jobbot"]
packages = ["ingestion", "ingestion.models", "ingestion.services", "ingestion.utils", "ingestion.parsers", "resume_builder", "resume_builder.models", "resume_builder.services", "resume_builder.utils"]
